--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Моля, изберете страна.
 please-select-a-course=Моля, изберете кукс.
 please-select-a-currency=Моля, изберете валута.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Изберете обхват на разпространение. (Automatic Translation)
 please-select-a-document-type=Моля, изберете валиден тип.
 please-select-a-duration=Моля, изберете продължителност.
@@ -11370,7 +11369,6 @@ please-select-a-location=Моля, изберете място.
 please-select-a-menu-item-to-continue=Изберете елемент от менюто, за да продължите. (Automatic Translation)
 please-select-a-method-on-the-left=Изберете метод вляво. (Automatic Translation)
 please-select-a-new-repository-hook=Моля, изберете нова закачка в хранилището. (Automatic Translation)
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Моля, изберете продукт.
 please-select-a-region=Моля, изберете район.
 please-select-a-response=Моля, изберете отговор.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Изберете пон
 please-select-at-least-one-section=Изберете поне една секция. (Automatic Translation)
 please-select-at-least-one-site=Моля, изберете поне един лиценз.
 please-select-at-least-one-social-relation-type=Изберете поне един тип социални връзки. (Automatic Translation)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Изберете една опция. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Изберете или създайте нов набор от полета, съдържащ всички полета, които ще бъдат използвани от вашите формуляри. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Изберете или създайте нова дефиниция на работния поток, за да напътствате попълването на формуляри. Можете да свържете формулярите със задачи на работен поток в следващата стъпка. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Изберете или създайте един формуляр за всяка задача на работен поток. Всеки формуляр е подмножество от набора от полета, дефиниран в стъпка 2. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Изберете приложенията, за които искате да започнете процес на експортиране. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Please select the available languages of the site among the available languages of the portal (<em>{0}</em>). (Automatic Copy)
