--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -11361,7 +11361,6 @@ please-select-a-country=Seleccioneu un país.
 please-select-a-course=Seleccioneu un curs.
 please-select-a-currency=Seleccioneu una moneda.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Seleccioneu un llenguatge per defecte entre els llenguatges disponibles al lloc (<em>{0}</em>).
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Seleccioneu un àmbit de distribució.
 please-select-a-document-type=Seleccioneu un tipus de regla.
 please-select-a-duration=Seleccioneu una durada.
@@ -11372,7 +11371,6 @@ please-select-a-location=Seleccioneu una localització.
 please-select-a-menu-item-to-continue=Seleccioneu un element de menú per continuar.
 please-select-a-method-on-the-left=Seleccioneu un mètode dels de l'esquerra.
 please-select-a-new-repository-hook=Seleccioneu un ganxo de repositori nou.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Seleccioneu un producte.
 please-select-a-region=Seleccioneu una regió.
 please-select-a-response=Seleccioneu una resposta.
@@ -11433,10 +11431,12 @@ please-select-at-least-one-organization-and-one-location=Seleccioneu almenys una
 please-select-at-least-one-section=Si us plau, seleccioneu almenys una secció.
 please-select-at-least-one-site=Seleccioneu almenys un lloc.
 please-select-at-least-one-social-relation-type=Seleccioneu com a mínim un tipus de relació social.
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Seleccioneu una opció.
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Seleccioneu o creeu un conjunt de camps nou que contingui tots els camps que s'utilitzaran als vostres formularis.
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Seleccioneu o creeu una nova definició de flux de treball per ajudar a omplir els formularis. En el pas següent podreu associar formularis a les tasques del flux de treball.
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Seleccioneu o creeu un formulari per a cada tasca del flux de treball. Cada formulari és un subconjunt del conjunt de camps definit al pas 2.
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Seleccioneu les aplicacions per a les quals vulgueu iniciar un procés d'exportació.
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Seleccioneu els idiomes disponibles de la biblioteca de continguts entre els idiomes que admet el portal ({0}).
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Seleccioneu els llenguatges disponibles en el lloc entre els disponibles en el portal (<em>{0}</em>).
