--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Zadejte prosím stát/zemi.
 please-select-a-course=Vyberte prosím kurz.
 please-select-a-currency=Zadejte prosím měnu.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Vyberte prosím výchozí jazyk z dostupných jazyků webu (<em>{0}</em>).
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Vyberte, prosím, rozsah distribuce.
 please-select-a-document-type=Zvolte, prosím, platný typ pravidla.
 please-select-a-duration=Zadejte prosím dobu trvání.
@@ -11370,7 +11369,6 @@ please-select-a-location=Zvolte prosím umístění.
 please-select-a-menu-item-to-continue=Chcete-li pokračovat, vyberte položku nabídky. (Automatic Translation)
 please-select-a-method-on-the-left=Zvolte prosím metodu vlevo.
 please-select-a-new-repository-hook=Vyberte prosím nový "hook repositář".
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Zvolte prosím výrobek.
 please-select-a-region=Zvolte prosím region.
 please-select-a-response=Zvolte prosím odpověď.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Vyberte alespoň jednu 
 please-select-at-least-one-section=Vyberte, prosím, nejméně jednu sekci.
 please-select-at-least-one-site=Vyberte, prosím, nejméně jeden web.
 please-select-at-least-one-social-relation-type=Vyberte alespoň jeden typ sociálního vztahu. (Automatic Translation)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Vyberte jednu možnost. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Vyberte nebo vytvořte novou sadu polí obsahující všechna pole, která budou formuláře používat. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Vyberte nebo vytvořte novou definici pracovního postupu, která bude vodítkem pro vyplování formulářů. Formuláře můžete přidružit k úkolům pracovního postupu v dalším kroku. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Vyberte nebo vytvořte jeden formulář pro každý úkol pracovního postupu. Každý formulář je podmnožinou sady polí definované v kroku 2. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Vyberte aplikace, pro které chcete zahájit proces exportu. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Zvolte prosím dostupné jazyky webu z dostupných jazyků portálu (<em>{0}</em>).
