--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Vælg venligst et land.
 please-select-a-course=Vælg venligst et kursus.
 please-select-a-currency=Vælg venligst en valuta.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Vælg et distributionsområde. (Automatic Translation)
 please-select-a-document-type=Vælg venligst a valid type.
 please-select-a-duration=Vælg venligst en varighed.
@@ -11370,7 +11369,6 @@ please-select-a-location=Vælg venligst en placering.
 please-select-a-menu-item-to-continue=Vælg et menupunkt for at fortsætte. (Automatic Translation)
 please-select-a-method-on-the-left=Please select a method on the left. (Automatic Copy)
 please-select-a-new-repository-hook=Vælg venligst et nyt lagrings-hook.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Vælg venligst et produkt.
 please-select-a-region=Vælg venligst en region.
 please-select-a-response=Vælg venligst et svar.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Please select at least 
 please-select-at-least-one-section=Vælg mindst én sektion. (Automatic Translation)
 please-select-at-least-one-site=Vælg venligst at least one site.
 please-select-at-least-one-social-relation-type=Vælg mindst én social relationstype. (Automatic Translation)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Vælg én indstilling. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Vælg eller opret et nyt feltsæt, der indeholder alle de felter, der skal bruges af formularerne. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Vælg eller opret en ny arbejdsprocesdefinition for at vejlede fuldførelsen af formularer. Du kan knytte formularer til arbejdsprocesopgaver i næste trin. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Vælg eller opret én formular for hver arbejdsprocesopgave. Hver formular er et undersæt af det feltsæt, der er defineret i trin 2. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Vælg de programmer, du vil starte en eksportproces for. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Please select the available languages of the site among the available languages of the portal (<em>{0}</em>). (Automatic Copy)
