--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Παρακαλώ επιλέξτε μια χώρα.
 please-select-a-course=Παρακαλώ επιλέξτε μια σειρά μαθημάτων.
 please-select-a-currency=Παρακαλώ επιλέξτε ένα νόμισμα.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Επιλέξτε ένα πεδίο κατανομής. (Automatic Translation)
 please-select-a-document-type=Παρακαλώ επιλέξτε έναν έγκυρο τύπο.
 please-select-a-duration=Παρακαλώ επιλέξτε μια διάρκεια.
@@ -11370,7 +11369,6 @@ please-select-a-location=Παρακαλώ επιλέξτε μια θέση.
 please-select-a-menu-item-to-continue=Επιλέξτε ένα στοιχείο μενού για να συνεχίσετε. (Automatic Translation)
 please-select-a-method-on-the-left=Παρακαλώ επιλέξτε μια μέθοδο αριστερά.
 please-select-a-new-repository-hook=Παρακαλώ επιλέξτε ένα νέο hook χώρου φύλαξης.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Παρακαλώ επιλέξτε ένα προϊόν.
 please-select-a-region=Παρακαλώ επιλέξτε μια περιοχή.
 please-select-a-response=Παρακαλώ επιλέξτε μια απάντηση.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Επιλέξτε του
 please-select-at-least-one-section=Επιλέξτε τουλάχιστον μία ενότητα. (Automatic Translation)
 please-select-at-least-one-site=Παρακαλώ επιλέξτε τουλάχιστον ένα site.
 please-select-at-least-one-social-relation-type=Επιλέξτε τουλάχιστον έναν τύπο κοινωνικής σχέσης. (Automatic Translation)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Παρακαλώ ορίστε μία επιλογή. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Επιλέξτε ή δημιουργήστε ένα νέο σύνολο πεδίων που περιέχει όλα τα πεδία που θα χρησιμοποιηθούν από τις φόρμες σας. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Επιλέξτε ή δημιουργήστε έναν νέο ορισμό ροής εργασίας για να καθοδηγήσετε τη συμπλήρωση φορμών. Μπορείτε να συσχετίσετε φόρμες με εργασίες ροής εργασίας στο επόμενο βήμα. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Επιλέξτε ή δημιουργήστε μία φόρμα για κάθε εργασία ροής εργασίας. Κάθε φόρμα είναι ένα υποσύνολο του συνόλου πεδίων που ορίζεται στο βήμα 2. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Επιλέξτε τις εφαρμογές για τις οποίες θέλετε να ξεκινήσετε μια διαδικασία εξαγωγής. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Please select the available languages of the site among the available languages of the portal (<em>{0}</em>). (Automatic Copy)
