--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -11361,7 +11361,6 @@ please-select-a-country=Por favor, seleccione un país.
 please-select-a-course=Por favor, seleccione un curso.
 please-select-a-currency=Por favor, seleccione una moneda.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Por favor, seleccione un idioma por defecto entre los idiomas disponibles en el sitio (<em>{0}</em>).
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Por favor, seleccione un ámbito de distribución.
 please-select-a-document-type=Por favor, seleccione un tipo válido.
 please-select-a-duration=Por favor, seleccione una duración.
@@ -11372,7 +11371,6 @@ please-select-a-location=Por favor, seleccione una localización.
 please-select-a-menu-item-to-continue=Seleccione un elemento de menú para continuar.
 please-select-a-method-on-the-left=Por favor, seleccione un método en la izquierda.
 please-select-a-new-repository-hook=Por favor, seleccione un nuevo hook para el repositorio.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Por favor, seleccione un producto.
 please-select-a-region=Por favor, seleccione una región.
 please-select-a-response=Por favor, seleccione una respuesta.
@@ -11433,10 +11431,12 @@ please-select-at-least-one-organization-and-one-location=Por favor, seleccione a
 please-select-at-least-one-section=Por favor, seleccione al menos una sección.
 please-select-at-least-one-site=Por favor, seleccione por lo menos un sitio.
 please-select-at-least-one-social-relation-type=Por favor, seleccione al menos un tipo de relación social.
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Seleccione una opción.
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Seleccione o cree un conjunto de campos que contenga todos los campos que se usarán en sus formularios.
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Seleccione o cree una definición de flujo de trabajo para guiar en el proceso de completar los formularios. En el paso siguiente, puede asociar formularios a tareas de flujo de trabajo.
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Seleccione o cree un formulario para cada tarea del flujo de trabajo. Cada formulario es un subconjunto del conjunto de campos definido en el paso 2.
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Seleccione las aplicaciones para las que quiera iniciar un proceso de exportación.
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Seleccione los idiomas disponibles del repositorio entre los idiomas disponibles en el portal ({0}).
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Por favor, seleccione los idiomas disponibles en el sitio entre los disponibles en el portal (<em>{0}</em>).
