--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Vali riik.
 please-select-a-course=Vali kursus.
 please-select-a-currency=Vali valuuta.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Valige leviulatus. (Automatic Translation)
 please-select-a-document-type=Vali kehtiv tüüp.
 please-select-a-duration=Vali kestus.
@@ -11370,7 +11369,6 @@ please-select-a-location=Vali asukoht.
 please-select-a-menu-item-to-continue=Jätkamiseks valige menüükäsk. (Automatic Translation)
 please-select-a-method-on-the-left=Valige vasakul soovitud meetod. (Automatic Translation)
 please-select-a-new-repository-hook=Valige uus hoidlakonks. (Automatic Translation)
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Vali toode.
 please-select-a-region=Vali piirkond.
 please-select-a-response=Vali vastus.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Valige vähemalt üks o
 please-select-at-least-one-section=Valige vähemalt üks jaotis. (Automatic Translation)
 please-select-at-least-one-site=Vali vähemalt üks litsents.
 please-select-at-least-one-social-relation-type=Valige vähemalt üks suhtlussuhte tüüp. (Automatic Translation)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Valige üks suvand. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Valige või looge uus väljakomplekt, mis sisaldab kõiki välju, mida teie vormid kasutavad. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Vormide täitmise suunamiseks valige või looge uus töövoomääratlus. Järgmises etapis saate vormid seostada töövooülesannetega. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Valige või looge iga töövooülesande jaoks üks vorm. Iga vorm on juhises 2 määratletud väljakomplekti alamhulk. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Valige rakendused, mille ekspordiprotsessi soovite käivitada. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Please select the available languages of the site among the available languages of the portal (<em>{0}</em>). (Automatic Copy)
