--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=لطفا یک کشور انتخاب کنید.
 please-select-a-course=لطفا یک کشور انتخاب کنید.
 please-select-a-currency=لطفا یک کشور انتخاب کنید.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=لطفا یک زبان پیش‌فرض از بین زبان های موجود در سایت انتخاب کنید (<em>{0}</em>).
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=لطفا یک منطقه توزیع را انتخاب کنید
 please-select-a-document-type=لطفا يکی از انواع مستندات را انتخاب کنيد.
 please-select-a-duration=لطفا یک طول زمان مناسب انتخاب کنید.
@@ -11370,7 +11369,6 @@ please-select-a-location=لطفا یک مورد را انتخاب کنید.
 please-select-a-menu-item-to-continue=لطفاً یک مورد منو برای ادامه انتخاب کنید. (Automatic Translation)
 please-select-a-method-on-the-left=لطفا یک روش در سمت چپ انتخاب نمایید.
 please-select-a-new-repository-hook=لطفا یک مخزن افزونه جدید انتخاب کنید.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=لطفا یک محصول انتخاب کنید.
 please-select-a-region=لطفا یک منطقه انتخاب کنید.
 please-select-a-response=لطفا یک پاسخ انتخاب کنید.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=لطفا حد اقل ی
 please-select-at-least-one-section=لطفا دست‌کم یک بخش انتخاب نمایید.
 please-select-at-least-one-site=لطفا حداقل یک سایت انتخاب کنید
 please-select-at-least-one-social-relation-type=لطفا حداقل یک نوع رابطه اجتماعی وارد کنید.
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=لطفا یک گزینه را انتخاب کنید. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=لطفا یک مجموعه فیلد جدید شامل تمام زمینه هایی که توسط فرم های شما استفاده خواهد شد را انتخاب کنید یا ایجاد کنید. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=لطفا یک تعریف گردش کار جدید برای هدایت تکمیل فرم ها انتخاب یا ایجاد کنید. شما می توانید فرم ها را به کارهای گردش کار در مرحله بعدی مرتبط کنید. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=لطفاً یک فرم برای هر کار گردش کار انتخاب یا ایجاد کنید. هر فرم زیرمجموعه ای از مجموعه فیلد است که در مرحله ۲ تعریف شده است. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=لطفا برنامه های کاربردی که می خواهید برای شروع یک فرایند صادرات را انتخاب کنید. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=لطفا زبان موجود در سایت را از میان زبا های موجود در پرتال انتخاب کنید. (<em>{0}</em>).
