--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Veuillez choisir un pays.
 please-select-a-course=Veuillez choisir un cours.
 please-select-a-currency=Veuillez choisir une devise.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Veuillez sélectionner une langue par défaut parmi le langues disponibles du site (<em>{0}</em>).
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Veuillez selectionner une étendue de distribution.
 please-select-a-document-type=Veuillez choisir un type valide.
 please-select-a-duration=Veuillez choisir une durée.
@@ -11370,7 +11369,6 @@ please-select-a-location=Veuillez choisir un endroit.
 please-select-a-menu-item-to-continue=Veuillez sélectionner un élément de menu pour pouvoir continuer.
 please-select-a-method-on-the-left=Veuillez sélectionner une méthode sur la gauche.
 please-select-a-new-repository-hook=Veuillez choisir un nouveau crochet de dépôt.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Veuillez choisir un produit.
 please-select-a-region=Veuillez choisir une région.
 please-select-a-response=Veuillez choisir une réponse.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Veuillez sélectionner 
 please-select-at-least-one-section=Veuillez choisir au moins une section.
 please-select-at-least-one-site=Veuillez choisir au moins un permis.
 please-select-at-least-one-social-relation-type=Veuillez sélectionner au moins un type de relation sociale.
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Veuillez sélectionner une option.
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Veuillez sélectionner ou créer un nouveau jeu de champs contenant tous les champs qui seront utilisés par vos formulaires.
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Veuillez sélectionner ou créer une nouvelle définition de flux de travail pour guider le remplissage des formulaires. Dans la prochaine étape, vous pouvez associer les formulaires aux tâches du flux de travail.
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Veuillez sélectionner ou créer un formulaire pour chaque tâche de flux de travail. Chaque formulaire est un sous-jeu du jeu de champs défini à l'étape 2.
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Veuillez sélectionner les applications pour lesquelles vous voulez démarrer un processus d'exportation.
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Sélectionnez les langues disponibles du dépôt parmi les langues disponibles du portail ({0}).
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Veuillez sélectionner les langues disponibles pour ce site parmi les langues disponible du portail (<em>{0}</em>).
