--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -11362,7 +11362,6 @@ please-select-a-country=Válassz országot!
 please-select-a-course=Válassz tanfolyamot!
 please-select-a-currency=Válassz pénznemet!
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Válassz egy alapértelmezett nyelvet a webhely (<em>{0}</em>) választható nyelvei közül!
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Válassz egy disztribúciós hatókört!
 please-select-a-document-type=Válassz egy dokumentum típust!
 please-select-a-duration=Válassz időtartamot!
@@ -11373,7 +11372,6 @@ please-select-a-location=Válassz egy helyet!
 please-select-a-menu-item-to-continue=Folytatáshoz Jelöljön meg egy menüpontot.
 please-select-a-method-on-the-left=Ki kell választani egy metódust a bal oldalról.
 please-select-a-new-repository-hook=Válassz új tároló hookot!
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Válassz terméket!
 please-select-a-region=Válassz régiót!
 please-select-a-response=Válasz választ.
@@ -11434,10 +11432,12 @@ please-select-at-least-one-organization-and-one-location=Kérem, válasszon lega
 please-select-at-least-one-section=Legalább egy szakaszt ki kell választani.
 please-select-at-least-one-site=Válassz legalább egy webhelyet!
 please-select-at-least-one-social-relation-type=Válassz legalább egy közösségi kapcsolat típust.
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Kérjük, válassz egy opciót.
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Válasszon vagy hozzon létre egy új mezőkészletet, amely tartalmazza az űrlapjai által használni kívánt összes mezőt.
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Válasszon vagy hozzon létre egy új munkafolyamat-definíciót, amely irányítja az űrlapok kitöltését. A következő lépésben űrlapokat rendelhet hozzá a munkafolyamat feladataihoz.
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Válasszon vagy hozzon létre egy-egy űrlapot minden egyes munkafolyamat-feladathoz. Minden űrlap a 2. lépésben meghatározott mezőkészlet részhalmaza.
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Válassza ki azokat az alkalmazásokat, amelyekre exportálási folyamatot kíván indítani.
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Válassza ki az adattár elérhető nyelveit a portál ({0}) rendelkezésre álló nyelvei közül.
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Válaszd ki a webhely elérhető nyelveit a portál (<em>{0}</em>) rendelkezésre álló nyelvei közül!
