--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=אנא בחר במדינה
 please-select-a-course=אנא בחר בקורס
 please-select-a-currency=אנא בחר במטבע
 please-select-a-default-language-among-the-available-languages-of-the-site-x=אנא בחר שפת ברירת מחדל מבין השפות הזמינות באתר (<em>{0}</em>).
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=אנא בחר תחום הפצה.
 please-select-a-document-type=אנא בחר סוג מסמך.
 please-select-a-duration=אנא בחר במיקום
@@ -11370,7 +11369,6 @@ please-select-a-location=אנא בחר במיקום
 please-select-a-menu-item-to-continue=אנא בחר פריט תפריט כדי להמשיך.
 please-select-a-method-on-the-left=אנא בחר שיטה בצד שמאל.
 please-select-a-new-repository-hook=אנא בחר קרס מאגר חדש.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=אנא בחר במוצר
 please-select-a-region=אנא בחר באזור
 please-select-a-response=אנא בחר בתגובה
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=.נא לבחור לפח
 please-select-at-least-one-section=אנא בחר לפחות סעיף אחד.
 please-select-at-least-one-site=אנא בחר אתר אחד לפחות.
 please-select-at-least-one-social-relation-type=אנא בחר לפחות סוג קשר חברתי אחד.
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=אנא בחר אפשרות אחת.
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=אנא בחר או צור קבוצת שדות חדשה המכילה את כל השדות בהם ייעשה שימוש על ידי הטפסים שלך.
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=אנא בחר או צור הגדרת זרימת עבודה חדשה להנחיית מילוי הטפסים שלך. ניתן לשייך טפסים עם מטלות זרימת עבודה בשלב הבא.
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=נא לבחור או ליצור טופס אחד עבור כל מטלה של זרימת עבודה. כל טופס הוא תת קבוצה של קבוצת השדות שמוגדרת בשלב 2.
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=אנא בחר את היישומים שעבורם ברצונך להתחיל תהליך ייצוא.
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=אנא בחר את השפות הזמינות באתר מבין השפות הזמינות בפורטל (<em>{0}</em>).
