--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Pasirinkite šalį. (Automatic Translation)
 please-select-a-course=Pasirinkite kursą. (Automatic Translation)
 please-select-a-currency=Pasirinkite valiutą. (Automatic Translation)
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Pasirinkite paskirstymo aprėptį. (Automatic Translation)
 please-select-a-document-type=Prašome pasirinkti dokumento tipą.
 please-select-a-duration=Pasirinkite trukmę. (Automatic Translation)
@@ -11370,7 +11369,6 @@ please-select-a-location=Pasirinkite vietą. (Automatic Translation)
 please-select-a-menu-item-to-continue=Norėdami tęsti, pasirinkite meniu komandą. (Automatic Translation)
 please-select-a-method-on-the-left=Pasirinkite metodą kairėje. (Automatic Translation)
 please-select-a-new-repository-hook=Pasirinkite naują saugyklos kabliuką. (Automatic Translation)
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Pasirinkite produktą. (Automatic Translation)
 please-select-a-region=Pasirinkite regioną. (Automatic Translation)
 please-select-a-response=Pasirinkite atsakymą. (Automatic Translation)
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Pasirinkite bent vieną
 please-select-at-least-one-section=Pasirinkite bent vieną sekciją. (Automatic Translation)
 please-select-at-least-one-site=Pasirinkite bent vieną svetainę. (Automatic Translation)
 please-select-at-least-one-social-relation-type=Pasirinkite bent vieną socialinio ryšio tipą. (Automatic Translation)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Pasirinkite vieną parinktį. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Pasirinkite arba sukurkite naują laukų rinkinį, kuriame būtų visi laukai, kuriuos naudos jūsų formos. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Pasirinkite arba sukurkite naują darbo eigos aprašą, kuris padės pildyti formas. Kitame žingsnyje formas galite susieti su darbo eigos užduotimis. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Kiekvienai darbo eigos užduočiai pasirinkite arba sukurkite vieną formą. Kiekviena forma yra 2 žingsnyje apibrėžto laukų rinkinio pogrupis. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Pasirinkite programas, kurių eksportavimo procesą norite pradėti. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Please select the available languages of the site among the available languages of the portal (<em>{0}</em>). (Automatic Copy)
