--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Sila pilih negara. (Automatic Translation)
 please-select-a-course=Sila pilih kursus. (Automatic Translation)
 please-select-a-currency=Sila pilih mata wang. (Automatic Translation)
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Sila pilih skop pengedaran. (Automatic Translation)
 please-select-a-document-type=Sila pilih jenis dokumen. (Automatic Translation)
 please-select-a-duration=Sila pilih satu tempoh. (Automatic Translation)
@@ -11370,7 +11369,6 @@ please-select-a-location=Sila pilih lokasi. (Automatic Translation)
 please-select-a-menu-item-to-continue=Sila pilih item menu untuk meneruskan. (Automatic Translation)
 please-select-a-method-on-the-left=Sila pilih satu kaedah di sebelah kiri. (Automatic Translation)
 please-select-a-new-repository-hook=Sila pilih cangkuk repositori baru. (Automatic Translation)
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Sila pilih produk. (Automatic Translation)
 please-select-a-region=Sila pilih rantau. (Automatic Translation)
 please-select-a-response=Sila pilih jawapan. (Automatic Translation)
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Sila pilih sekurang-kur
 please-select-at-least-one-section=Sila pilih sekurang-kurangnya satu bahagian. (Automatic Translation)
 please-select-at-least-one-site=Sila pilih sekurang-kurangnya satu tapak. (Automatic Translation)
 please-select-at-least-one-social-relation-type=Sila pilih sekurang-kurangnya satu jenis hubungan sosial. (Automatic Translation)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Sila pilih satu opsyen. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Sila pilih atau cipta set medan baru yang mengandungi semua medan yang akan digunakan oleh borang anda. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Sila pilih atau cipta definisi aliran kerja baru untuk membimbing penyiapan borang. Anda boleh mengaitkan borang untuk tugas aliran kerja dalam langkah seterusnya. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Sila pilih atau cipta satu borang untuk setiap Tugas Aliran Kerja. Setiap borang adalah subset set medan yang ditakrifkan dalam langkah 2. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Sila pilih aplikasi yang anda mahu mulakan proses eksport. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Please select the available languages of the site among the available languages of the portal (<em>{0}</em>). (Automatic Copy)
