--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -11362,7 +11362,6 @@ please-select-a-country=Selecteer een land.
 please-select-a-course=Selecteer een cursus.
 please-select-a-currency=Selecteer een munt.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Selecteer een standaardtaal uit de beschikbare talen van de site (<em>{0}</em>).
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Selecteer een distributiebereik.
 please-select-a-document-type=Selecteer een regeltype.
 please-select-a-duration=Selecteer een duur.
@@ -11373,7 +11372,6 @@ please-select-a-location=Selecteer een locatie.
 please-select-a-menu-item-to-continue=Selecteer een menu-item om door te gaan.
 please-select-a-method-on-the-left=Selecteer links een methode.
 please-select-a-new-repository-hook=Selecteer een nieuwe bewaarplaats.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Selecteer een product.
 please-select-a-region=Selecteer een regio.
 please-select-a-response=Selecteer een reactie.
@@ -11434,10 +11432,12 @@ please-select-at-least-one-organization-and-one-location=Selecteer ten minste é
 please-select-at-least-one-section=Selecteer minstens één sectie.
 please-select-at-least-one-site=Selecteer minstens één site.
 please-select-at-least-one-social-relation-type=Selecteer ten minste één sociale relatietype.
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Kies een optie.
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Selecteer of maak een nieuwe veldenset met alle velden die worden gebruikt door uw formulieren.
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Selecteer of maak een nieuwe workflowomschrijving voor begeleiding bij het invullen van formulieren. U kunt formulieren koppelen aan workflowtaken in de volgende stap.
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Selecteer of maak een formulier voor elke workflowtaak. Elk formulier is een subset van de veldenset omschreven in stap 2.
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Selecteer de applicaties waarvoor u een exportproces wilt starten.
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Selecteer de beschikbare talen voor de assetbibliotheek onder de beschikbare talen van de portal ({0}).
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Selecteer de beschikbare talen van de site uit de talen die beschikbaar zijn in de portal (<em>{0}</em>).
