--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -11362,7 +11362,6 @@ please-select-a-country=Selecteer een land.
 please-select-a-course=Selecteer een cursus.
 please-select-a-currency=Selecteer een munt.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Please select a distribution scope. (Automatic Copy)
 please-select-a-document-type=Selecteer een geldig type.
 please-select-a-duration=Selecteer een duur.
@@ -11373,7 +11372,6 @@ please-select-a-location=Selecteer een locatie.
 please-select-a-menu-item-to-continue=Please select a menu item to continue. (Automatic Copy)
 please-select-a-method-on-the-left=Selecteer links een methode.
 please-select-a-new-repository-hook=Selecteer een nieuw repository.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Selecteer een product.
 please-select-a-region=Selecteer een gebied.
 please-select-a-response=Selecteer een reactie.
@@ -11434,10 +11432,12 @@ please-select-at-least-one-organization-and-one-location=Please select at least 
 please-select-at-least-one-section=Please select at least one section. (Automatic Copy)
 please-select-at-least-one-site=Selecteer minstens één vergunning.
 please-select-at-least-one-social-relation-type=Please select at least one social relation type. (Automatic Copy)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Please select one option. (Automatic Copy)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Please select or create a new field set containing all the fields that will be used by your forms. (Automatic Copy)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Please select or create a new workflow definition to guide the completion of forms. You can associate forms to workflow tasks in the next step. (Automatic Copy)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Please select or create one form for each Workflow Task. Each form is a subset of the field set defined in step 2. (Automatic Copy)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Please select the applications for which you want to start an export process. (Automatic Copy)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Please select the available languages of the site among the available languages of the portal (<em>{0}</em>). (Automatic Copy)
