--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Wybierz kraj.
 please-select-a-course=Wybierz kurs.
 please-select-a-currency=Wybierz walutę.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Wybierz domyślny język spośród języków dostępnych w witrynie (<em>{0}</em>).
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Określ zakres dystrybucji.
 please-select-a-document-type=Wybierz typ reguły.
 please-select-a-duration=Wybierz czas trwania.
@@ -11370,7 +11369,6 @@ please-select-a-location=Wybierz lokalizację.
 please-select-a-menu-item-to-continue=Wybierz element menu, aby kontynuować. (Automatic Translation)
 please-select-a-method-on-the-left=Wybierz jedną z metod po lewej.
 please-select-a-new-repository-hook=Wybierz nowy hook z repozytorium.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Wybierz produkt.
 please-select-a-region=Wybierz region.
 please-select-a-response=Wybierz odpowiedź.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Wybierz co najmniej jed
 please-select-at-least-one-section=Wprowadź przynajmniej jedną sekcję.
 please-select-at-least-one-site=Wybierz co najmniej jedną witrynę.
 please-select-at-least-one-social-relation-type=Wybierz co najmniej jeden typ relacji społecznej. (Automatic Translation)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Wybierz jedną opcję. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Wybierz lub utwórz nowy zestaw pól zawierający wszystkie pola, które będą używane przez formularze. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Wybierz lub utwórz nową definicję przepływu pracy, aby kierować wypełnianiem formularzy. Formularze można skojarzyć z zadaniami przepływu pracy w następnym kroku. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Wybierz lub utwórz jeden formularz dla każdego zadania przepływu pracy. Każdy formularz jest podzbiorem zestawu pól zdefiniowanego w kroku 2. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Wybierz aplikacje, dla których chcesz rozpocząć proces eksportowania. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Wybierz dostępne języki witryny spośród języków dostępnych w portalu (<em>{0}</em>).
