--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Zadajte, prosím, krajinu.
 please-select-a-course=Zadajte, prosím, kurz.
 please-select-a-currency=Zadajte, prosím, menu.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Vyberte, prosím, prednastavené jazyk spomedzi dostupných jazykov sídla (<em>{0}</em>).
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Vyberte, prosím, rozsah distribúcie.
 please-select-a-document-type=Vyberte, prosím, typ pravidla.
 please-select-a-duration=Zadajte, prosím, trvanie.
@@ -11370,7 +11369,6 @@ please-select-a-location=Zadajte, prosím, lokáciu.
 please-select-a-menu-item-to-continue=Pokračujte výberom položky ponuky. (Automatic Translation)
 please-select-a-method-on-the-left=Vyberte, prosím, metódu naľavo.
 please-select-a-new-repository-hook=Vyberte, prosím, nový úložiskový "hook".
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Vyberte, prosím, produkt.
 please-select-a-region=Zadajte, prosím, oblasť.
 please-select-a-response=Vyberte, prosím, odpoveď.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Vyberte aspoň jednu or
 please-select-at-least-one-section=Vyberte aspoň jednu sekciu.
 please-select-at-least-one-site=Vyberte, prosím, aspoň jedno sídlo.
 please-select-at-least-one-social-relation-type=Vyberte, prosím, aspoň jeden typ sociálneho vzťahu.
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Vyberte jednu možnosť. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Vyberte alebo vytvorte novú množinu polí obsahujúcu všetky polia, ktoré budú formuláre používať. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Vyberte alebo vytvorte novú definíciu pracovného postupu, ktorá bude viesť vypĺňanie formulárov. Formuláre môžete priradiť k úlohám pracovného postupu v ďalšom kroku. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Vyberte alebo vytvorte jeden formulár pre každú úlohu pracovného postupu. Každý formulár je podmnožinou poľa definovaného v kroku 2. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Vyberte aplikácie, pre ktoré chcete spustiť proces exportu. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Vyberte, prosím, dostupné jazyky sídla spomedzi dostupných jazykov portálu (<em>{0}</em>).
