--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Välj ett land.
 please-select-a-course=Välj en kurs.
 please-select-a-currency=Välj en valuta.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Välj ett standardspråk från de tillgängliga språken på webbplatsen (<em>{0}</em>).
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Välj ett distributionsomfång.
 please-select-a-document-type=Välj en regeltyp.
 please-select-a-duration=Välj en löptid.
@@ -11370,7 +11369,6 @@ please-select-a-location=Välj plats.
 please-select-a-menu-item-to-continue=Välj ett menyobjekt för att fortsätta.
 please-select-a-method-on-the-left=Välj en metod till vänster.
 please-select-a-new-repository-hook=Välj en ny repository-koppling.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Välj produkt.
 please-select-a-region=Välj en region.
 please-select-a-response=Välj ett svar.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Välj minst en organisa
 please-select-at-least-one-section=Välj minst ett avsnitt.
 please-select-at-least-one-site=Välj minst en plats.
 please-select-at-least-one-social-relation-type=Välj minst en social relationstyp.
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Välj minst ett alternativ.
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Välj eller skapa en ny fältuppsättning som innehåller alla fält som ska användas i dina formulär.
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Välj eller skapa en ny definition för arbetsflödet som vägledning för att göra klart dina formulär. I nästa steg kan du koppla formulär till uppgifter i arbetsflödet.
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Välj eller skapa ett formulär för varje uppgift i arbetsflödet. Varje formulär är en delmängd av fältuppsättningen som anges i steg 2.
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Välj de applikationer som du vill inleda en exportprocess med.
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Välj de tillgängliga språken för tillgångsbiblioteket från de tillgängliga språken i portalen ({0}).
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Välj de tillgängliga språken på webbplatsen från de tillgängliga språken på portalen (<em>{0}</em>).
