--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Lütfen bir ülke seçin.
 please-select-a-course=Lütfen bir ders seçin.
 please-select-a-currency=Lütfen bir para birimi seçin.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Lütfen bir dağıtım kapsamı seçin. (Automatic Translation)
 please-select-a-document-type=Lütfen bir tür seçin.
 please-select-a-duration=Lütfen bir süre seçin.
@@ -11370,7 +11369,6 @@ please-select-a-location=Lütfen bir yer seçin.
 please-select-a-menu-item-to-continue=Lütfen devam etmek için bir menü öğesi seçin. (Automatic Translation)
 please-select-a-method-on-the-left=Lütfen solda bir yöntem seçin. (Automatic Translation)
 please-select-a-new-repository-hook=Lütfen yeni bir depo kancası seçin. (Automatic Translation)
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Lütfen bir ürün seçin.
 please-select-a-region=Lütfen bir bölge seçin.
 please-select-a-response=Lütfen bir cevap seçin.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Lütfen en az bir kurul
 please-select-at-least-one-section=Lütfen en az bir bölüm seçin. (Automatic Translation)
 please-select-at-least-one-site=Lütfen en az bir lisans seçin.
 please-select-at-least-one-social-relation-type=Lütfen en az bir sosyal ilişki türü seçin. (Automatic Translation)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Lütfen bir seçenek belirleyin. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Lütfen formlarınız tarafından kullanılacak tüm alanları içeren yeni bir alan kümesi seçin veya oluşturun. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Formların tamamlanmasına rehberlik etmek için lütfen yeni bir iş akışı tanımı seçin veya oluşturun. Formları bir sonraki adımda iş akışı görevlerine ilişkilendirebilirsiniz. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Lütfen her İş Akışı Görevi için bir form seçin veya oluşturun. Her form, adım 2'de tanımlanan alan kümesinin bir alt kümesidir. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Lütfen verme işlemini başlatmak istediğiniz uygulamaları seçin. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Please select the available languages of the site among the available languages of the portal (<em>{0}</em>). (Automatic Copy)
