--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Будь ласка виберіть країну.
 please-select-a-course=Будь ласка виберіть курс.
 please-select-a-currency=Будь ласка виберіть валюту.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Виберіть область розповсюдження. (Automatic Translation)
 please-select-a-document-type=Будь ласка, виберіть правильний тип.
 please-select-a-duration=Будь ласка виберіть тривалість.
@@ -11370,7 +11369,6 @@ please-select-a-location=Будь ласка виберіть місцезнах
 please-select-a-menu-item-to-continue=Будь ласка, виберіть пункт меню для продовження. (Automatic Translation)
 please-select-a-method-on-the-left=Будь ласка, виберіть метод ліворуч. (Automatic Translation)
 please-select-a-new-repository-hook=Будь ласка, оберіть новий гак сховища. (Automatic Translation)
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Будь ласка виберіть продукт.
 please-select-a-region=Будь ласка виберіть регіон.
 please-select-a-response=Будь ласка виберіть відповідь.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Виберіть при
 please-select-at-least-one-section=Виберіть принаймні один розділ. (Automatic Translation)
 please-select-at-least-one-site=Виберіть принаймні один сайт. (Automatic Translation)
 please-select-at-least-one-social-relation-type=Виберіть принаймні один тип соціальних зв'язків. (Automatic Translation)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Виберіть один параметр. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Виберіть або створіть новий набір полів, який містить усі поля, які використовуватимуться формами. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Виберіть або створіть нове визначення робочого циклу, щоб керувати завершенням форм. Форми можна зв'язати із завданнями робочого процесу на наступному кроці. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Виберіть або створіть одну форму для кожного завдання робочого циклу. Кожна форма є підмножиною набору полів, визначених на кроці 2. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Виберіть застосунки, для яких слід розпочати експорт. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Please select the available languages of the site among the available languages of the portal (<em>{0}</em>). (Automatic Copy)
