--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Vui lòng lựa chọn một nước.
 please-select-a-course=Vui lòng lựa chọn một nguồn.
 please-select-a-currency=Vui lòng lựa chọn một loại tiền tệ.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Bạn hãy chọn ngôn ngữ mặc định trong các ngôn ngữ có sẵn của trang thông tin (<em>{0}</em>).
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Bạn hãy chọn phạm vi phân tán.
 please-select-a-document-type=Vui lòng kiểu luật.
 please-select-a-duration=Vui lòng lựa chọn một thời hạn.
@@ -11370,7 +11369,6 @@ please-select-a-location=Vui lòng lựa chọn một vị trí địa lý.
 please-select-a-menu-item-to-continue=Vui lòng chọn một mục menu để tiếp tục. (Automatic Translation)
 please-select-a-method-on-the-left=Vui lòng lựa chọn một phương thức ở bên trái.
 please-select-a-new-repository-hook=Vui lòng lựa chọn một nơi( repository) lưu trữ mới.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Vui lòng lựa chọn một sản phẩm.
 please-select-a-region=Vui lòng lựa chọn một vùng.
 please-select-a-response=Vui lòng lựa chọn một đáp ứng.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Vui lòng chọn ít nh
 please-select-at-least-one-section=Vui lòng chọn ít nhất một phần. (Automatic Translation)
 please-select-at-least-one-site=Vui lòng lựa chọn ít nhất một trang thông tin.
 please-select-at-least-one-social-relation-type=Vui lòng chọn ít nhất một loại quan hệ xã hội. (Automatic Translation)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Vui lòng chọn một tùy chọn. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Vui lòng chọn hoặc tạo một tập hợp trường mới chứa tất cả các trường sẽ được biểu mẫu của bạn sử dụng. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Vui lòng chọn hoặc tạo định nghĩa dòng công việc mới để hướng dẫn hoàn thành biểu mẫu. Bạn có thể liên kết biểu mẫu với nhiệm vụ dòng công việc trong bước tiếp theo. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Vui lòng chọn hoặc tạo một biểu mẫu cho mỗi Nhiệm vụ Dòng công việc. Mỗi biểu mẫu là một tập hợp con của tập hợp trường được xác định trong bước 2. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Vui lòng chọn các ứng dụng mà bạn muốn bắt đầu quá trình xuất. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Bạn hãy chọn ngôn ngữ của trang thông tin trong các ngôn ngữ đã hỗ trợ của cổng vCloudPortal (<em>{0}</em>).
