--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -11361,7 +11361,6 @@ please-select-a-country=Bitte wählen Sie ein Land.
 please-select-a-course=Bitte wählen Sie einen Kurs.
 please-select-a-currency=Bitte wählen Sie Währung.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Bitte eine Standardsprache aus den verfügbaren Sprachen der Website wählen (<em>{0}</em>) .
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Bitte wählen Sie den Verteilungsbereich.
 please-select-a-document-type=Bitte wählen Sie einen gültigen Richtlinientyp.
 please-select-a-duration=Bitte wählen Sie eine Dauer.
@@ -11372,7 +11371,6 @@ please-select-a-location=Bitte wählen Sie einen Ort.
 please-select-a-menu-item-to-continue=Bitte wählen Sie einen Menüpunkt aus, um fortzufahren.
 please-select-a-method-on-the-left=Wählen Sie links eine Methode.
 please-select-a-new-repository-hook=Wählen Sie bitte einen neuen Repository-Hook.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Bitte wählen Sie ein Produkt.
 please-select-a-region=Bitte wählen Sie eine Region.
 please-select-a-response=Bitte wählen Sie eine Antwort.
@@ -11433,10 +11431,12 @@ please-select-at-least-one-organization-and-one-location=Bitte wählen Sie minde
 please-select-at-least-one-section=Bitte wählen Sie mindestens einen Abschnitt.
 please-select-at-least-one-site=Bitte wählen Sie mindestens eine Site.
 please-select-at-least-one-social-relation-type=Bitte wählen Sie mindestens einen Beziehungstyp.
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Bitte wählen Sie eine Option aus.
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Bitte wählen oder erstellen Sie einen Feldsatz, der alle von Ihren Formularen verwendeten Felder enthält.
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Bitte wählen oder erstellen Sie eine Workflowdefinition, die durch die Formulare führt. Im nächsten Schritt können Workflowaufgaben Formulare zugewiesen werden.
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Bitte wählen oder erstellen Sie ein Formular für jede Workflowaufgabe. Jedes Formular besteht aus einer Untermenge des in Schritt 2 festgelegten Feldsatzes.
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Bitte wählen Sie die Anwendungen aus, für die Sie einen Exportprozess starten möchten.
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Bitte wählen Sie die verfügbaren Sprachen dieses Repositorys von den verfügbaren Sprachen des Portals aus ({0}).
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Bitte wählen Sie die verfügbaren Sprachen dieser Site von den verfügbaren Sprachen des Portals aus (<em>{0}</em>).
