--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -11358,7 +11358,6 @@ please-select-a-country=Valitse maa.
 please-select-a-course=Valitse kurssi.
 please-select-a-currency=Valitse valuutta.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Valitse vakio kieli, saatavista sivuston kielistä (<em>{0}</em>).
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Valitse jakelunskooppi.
 please-select-a-document-type=Valitse tyyppi.
 please-select-a-duration=Valitse kesto.
@@ -11369,7 +11368,6 @@ please-select-a-location=Valitse sijainti.
 please-select-a-menu-item-to-continue=Ole hyvä ja valitse valikkokohta jatkaaksesi.
 please-select-a-method-on-the-left=Valitse haluttu toiminta vasemmalta.
 please-select-a-new-repository-hook=Valitse uusi "Repository hook"
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Valitse tuote.
 please-select-a-region=Valitse alue.
 please-select-a-response=Valitse vastaus.
@@ -11430,10 +11428,12 @@ please-select-at-least-one-organization-and-one-location=Valitse ainakin yksi or
 please-select-at-least-one-section=Ole hyvä ja valitse ainakin yksi osasto.
 please-select-at-least-one-site=Valitse ainakin yksi lisenssi.
 please-select-at-least-one-social-relation-type=Valitse vähintään yksi sosiaalisen suhteen tyyppi.
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Valitse yksi vaihtoehto.
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Valitse tai luo uusi kenttäsarja, joka sisältää kaikki kentät, joita tullaan käyttämään lomakkeillasi.
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Valitse tai luo uusi työnkulun määritelmä ohjataksesi lomakkeiden täytössä. Voit liittää lomakkeita työnkulun tehtäviin seuraavassa vaiheessa.
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Valitse tai luo yksi lomake jokaiselle Työnkulun Tehtävälle. Jokainen lomake on vaiheessa 2 määritellyn kenttäjoukon alijoukko.
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Valitse sovellukset, joille haluat käynnistää vientiprosessin.
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Valitse sisältökirjaston saatavilla olevat kielet portaalin saatavilla olevista kielistä ({0}).
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Valitse saatavissa olevat kielet, portaalin saatavissa olevista kielistä (<em>{0}</em>).
