--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Por favor, selecciona un país.
 please-select-a-course=Por favor, selecciona un curso.
 please-select-a-currency=Por favor, selecciona unha moeda.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Por favor, seleccione un ámbito de distribución.
 please-select-a-document-type=Por favor, selecciona un tipo válido.
 please-select-a-duration=Por favor, selecciona unha duración.
@@ -11370,7 +11369,6 @@ please-select-a-location=Por favor, selecciona unha localización.
 please-select-a-menu-item-to-continue=Please select a menu item to continue. (Automatic Copy)
 please-select-a-method-on-the-left=Please select a method on the left. (Automatic Copy)
 please-select-a-new-repository-hook=Por favor, selecciona un novo repositorio de hook.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Por favor, selecciona un produto.
 please-select-a-region=Por favor, selecciona unha rexión.
 please-select-a-response=Por favor, selecciona unha resposta.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Please select at least 
 please-select-at-least-one-section=Por favor, selecciona polo menos unha sección.
 please-select-at-least-one-site=Por favor, selecciona polo menos unha licenza.
 please-select-at-least-one-social-relation-type=Please select at least one social relation type. (Automatic Copy)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Please select one option. (Automatic Copy)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Please select or create a new field set containing all the fields that will be used by your forms. (Automatic Copy)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Please select or create a new workflow definition to guide the completion of forms. You can associate forms to workflow tasks in the next step. (Automatic Copy)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Please select or create one form for each Workflow Task. Each form is a subset of the field set defined in step 2. (Automatic Copy)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Please select the applications for which you want to start an export process. (Automatic Copy)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Please select the available languages of the site among the available languages of the portal (<em>{0}</em>). (Automatic Copy)
