--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Silakan pilih sebuah negara.
 please-select-a-course=Silakan pilih kursus.
 please-select-a-currency=Silakan pilih mata uang.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Silakan pilih lingkup distribusi. (Automatic Translation)
 please-select-a-document-type=Silakan pilih Jenis yang berlaku
 please-select-a-duration=Silakan pilih jangka waktunya.
@@ -11370,7 +11369,6 @@ please-select-a-location=Silakan pilih lokasi.
 please-select-a-menu-item-to-continue=Silakan pilih butir menu untuk melanjutkan. (Automatic Translation)
 please-select-a-method-on-the-left=Silakan pilih metode di sebelah kiri.
 please-select-a-new-repository-hook=Silakan pilih hook repositori baru.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Silakan pilih produk.
 please-select-a-region=Silakan pilih daerah.
 please-select-a-response=Silakan pilih jawaban.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Silakan pilih minimal s
 please-select-at-least-one-section=Silahkan pilih setidaknya satu bagian.
 please-select-at-least-one-site=Harap pilih setidaknya satu lisensi.
 please-select-at-least-one-social-relation-type=Silakan pilih setidaknya satu jenis hubungan sosial. (Automatic Translation)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Pilihlah satu opsi. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Silakan pilih atau buat kumpulan bidang baru yang berisi semua bidang yang akan digunakan oleh formulir Anda. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Silakan pilih atau buat definisi alur kerja baru untuk memandu penyelesaian formulir. Anda bisa mengaitkan formulir ke tugas alur kerja di langkah berikutnya. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Silakan pilih atau buat satu formulir untuk setiap Tugas Alur Kerja. Setiap formulir adalah subkumpulan kumpulan bidang yang ditentukan di langkah 2. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Silakan pilih aplikasi yang ingin Anda mulai proses ekspornya. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Please select the available languages of the site among the available languages of the portal (<em>{0}</em>). (Automatic Copy)
