--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -11360,7 +11360,6 @@ please-select-a-country=Seleziona un paese.
 please-select-a-course=Seleziona un corso.
 please-select-a-currency=Seleziona una valuta.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Selezionare una lingua predefinita scelta tra le lingue disponibili per il sito (<em>{0}</em>).
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Selezionare un ambito di distribuzione.
 please-select-a-document-type=Seleziona un tipo documento.
 please-select-a-duration=Seleziona una durata.
@@ -11371,7 +11370,6 @@ please-select-a-location=Seleziona una posizione.
 please-select-a-menu-item-to-continue=Seleziona una voce di menù per continuare.
 please-select-a-method-on-the-left=Seleziona un metodo a sinistra.
 please-select-a-new-repository-hook=Seleziona un nuovo hook repository.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Seleziona un prodotto.
 please-select-a-region=Seleziona una provincia.
 please-select-a-response=Seleziona una risposta.
@@ -11432,10 +11430,12 @@ please-select-at-least-one-organization-and-one-location=Seleziona almeno una or
 please-select-at-least-one-section=Selezionare almeno una sezione.
 please-select-at-least-one-site=Seleziona almeno una licenza.
 please-select-at-least-one-social-relation-type=Seleziona almeno una tipologia di relazione sociale.
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Selezionare un'opzione. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Selezionare o creare un nuovo set di campi contenente tutti i campi che verranno utilizzati dai moduli. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Selezionare o creare una nuova definizione del flusso di lavoro per guidare il completamento dei moduli. È possibile associare moduli alle attività del flusso di lavoro nel passaggio successivo. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Selezionare o creare un modulo per ogni attività del flusso di lavoro. Ogni modulo è un sottoinsieme del set di campi definito nel passaggio 2. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Seleziona le applicazioni per cui si desidera avviare un processo di esportazione.
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Selezionare una lingua predefinita scelta tra le lingue disponibili per il sito (<em>{0}</em>).
