--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=나라를 선정하십시요.
 please-select-a-course=과정을 선정하십시오.
 please-select-a-currency=통화를 선정하십시오.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=배포 범위를 선택하십시오. (Automatic Translation)
 please-select-a-document-type=유효한 유형을 선정하십시요.
 please-select-a-duration=내구를 선정하십시오.
@@ -11370,7 +11369,6 @@ please-select-a-location=위치를 선정하십시오.
 please-select-a-menu-item-to-continue=계속하려면 메뉴 항목을 선택하십시오. (Automatic Translation)
 please-select-a-method-on-the-left=왼쪽에 있는 방법을 선택하십시오. (Automatic Translation)
 please-select-a-new-repository-hook=새 리포지토리 후크를 선택하십시오. (Automatic Translation)
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=제품을 선정하십시오.
 please-select-a-region=지구를 선정하십시요.
 please-select-a-response=응답을 선정하십시오.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=하나 이상의 조직
 please-select-at-least-one-section=하나 이상의 섹션을 선택하십시오. (Automatic Translation)
 please-select-at-least-one-site=적어도 1개의 면허를 선정하십시오.
 please-select-at-least-one-social-relation-type=하나 이상의 사회적 관계 유형을 선택하십시오. (Automatic Translation)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=한 가지 옵션을 선택하십시오. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=양식에서 사용할 모든 필드가 포함된 새 필드 집합을 선택하거나 작성하십시오. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=양식완성을 안내하기 위해 새 워크플로 정의를 선택하거나 작성하십시오. 다음 단계에서 양식을 워크플로 작업에 연결할 수 있습니다. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=각 워크플로 작업에 대해 하나의 양식을 선택하거나 작성하십시오. 각 양식은 2단계에서 정의된 필드 집합의 하위 집합입니다. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=내보내기 프로세스를 시작하려는 응용 프로그램을 선택하십시오. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=포털의 사용 가능한 언어 ({0}) 중에서 애셋 라이브러리의 사용 가능한 언어를 선택하십시오.
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Please select the available languages of the site among the available languages of the portal (<em>{0}</em>). (Automatic Copy)
