--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Vennligst velg et land.
 please-select-a-course=Vennligst velg et kurs.
 please-select-a-currency=Vennligst velg en valuta.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Vennligst velg et standardspråk blant språkene på nettstedet (<em>{0}</em>).
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Vennligst velg et virksomhetsområde for distribusjon.
 please-select-a-document-type=Vennligst velg en regeltype.
 please-select-a-duration=Vennligst velg et tidsrom.
@@ -11370,7 +11369,6 @@ please-select-a-location=Vennligst velg et sted.
 please-select-a-menu-item-to-continue=Velg et menyelement for å fortsette. (Automatic Translation)
 please-select-a-method-on-the-left=Vennligst velg en metode til venstre.
 please-select-a-new-repository-hook=Vennligst velg en ny depot-hook.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Vennligst velg et produkt.
 please-select-a-region=Vennligst velg en region.
 please-select-a-response=Vennligst velg en respons.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Velg minst én organisa
 please-select-at-least-one-section=Vennligst velg minst en seksjon.
 please-select-at-least-one-site=Vennligst velg minst et nettsted.
 please-select-at-least-one-social-relation-type=Vennligst velg minst en sosial relasjonstype.
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Vennligst angi et valg.
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Velg eller opprett et nytt feltsett som inneholder alle feltene som skal brukes av skjemaene. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Velg eller opprett en ny arbeidsflytdefinisjon for å veilede fullføringen av skjemaer. Du kan knytte skjemaer til arbeidsflytoppgaver i neste trinn. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Velg eller opprett ett skjema for hver arbeidsflytoppgave. Hvert skjema er et delsett av feltsettet som er definert i trinn 2. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Velg programmene du vil starte en eksportprosess for. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Vennligst velg det tilgjengelige språket for ressursbiblioteket blant språkene tilgjengelig i portalen ({0}).
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Vennligst velg tilgjengelig språk for nettstedet blant språkene tilgjengelig i portalen (<em>{0}</em>).
