--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -11361,7 +11361,6 @@ please-select-a-country=Por favor, selecione um país.
 please-select-a-course=Por favor, selecione um curso.
 please-select-a-currency=Por favor, selecione uma moeda.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Por favor, selecione o idioma por omissão entre os idiomas disponíveis do site (<em>{0}</em>).
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Por favor, selecione o âmbito de distribuição.
 please-select-a-document-type=Por favor, selecione um tipo de documento.
 please-select-a-duration=Por favor, selecione uma duração.
@@ -11372,7 +11371,6 @@ please-select-a-location=Por favor, selecione uma localização.
 please-select-a-menu-item-to-continue=Selecione um item do menu para continuar. (Automatic Translation)
 please-select-a-method-on-the-left=Por favor, selecione um dos métodos à esquerda.
 please-select-a-new-repository-hook=Por favor, selecione um novo hook de repositório.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Por favor, selecione um produto.
 please-select-a-region=Por favor, selecione uma região.
 please-select-a-response=Por favor, selecione uma resposta.
@@ -11433,10 +11431,12 @@ please-select-at-least-one-organization-and-one-location=Por favor, selecione pe
 please-select-at-least-one-section=Por favor seleccione pelo menos uma secção.
 please-select-at-least-one-site=Por favor, selecione pelo menos um site.
 please-select-at-least-one-social-relation-type=Por favor, selecione pelo menos um tipo de relação social.
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Por favor, selecione uma opção. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Por favor selecione ou crie um conjunto de campos que contenha todos os campos que serão usados por seus formulários.
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Por favor selecione ou crie uma nova definição de fluxo de trabalho para orientar o preenchimento de formulários. Você pode associar formulários a tarefas de fluxo de trabalho na próxima etapa.
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Por favor, selecione ou crie um formulário para cada tarefa de fluxo de trabalho. Cada formulário é um subconjunto do conjunto de campos definido na etapa 2.
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Selecione os aplicativos para os quais deseja iniciar um processo de exportação. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Por favor, selecione os idiomas disponíveis para o site entre os idiomas disponíveis do portal (<em>{0}</em>).
