--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Te rog selecteaza o tara.
 please-select-a-course=Te rog selecteaza un curs.
 please-select-a-currency=Te rog selecteaza o moneda.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Selectați un domeniu de distribuire. (Automatic Translation)
 please-select-a-document-type=Te rog selecteaza un tip valid.
 please-select-a-duration=Te rog selecteaza o durata.
@@ -11370,7 +11369,6 @@ please-select-a-location=Te rog selecteaza o locatie.
 please-select-a-menu-item-to-continue=Selectați un element de meniu pentru a continua. (Automatic Translation)
 please-select-a-method-on-the-left=Selectați o metodă din stânga. (Automatic Translation)
 please-select-a-new-repository-hook=Te rog selecteaza un nou element din repertoriu.
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Te rog selecteaza un produs.
 please-select-a-region=Te rog selecteaza o regiune.
 please-select-a-response=Te rog selecteaza un raspuns.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Selectați cel puțin o
 please-select-at-least-one-section=Selectați cel puțin o secțiune. (Automatic Translation)
 please-select-at-least-one-site=Te rog selecteaza macar o licenta.
 please-select-at-least-one-social-relation-type=Vă rugăm să selectați cel puțin un tip de relație socială. (Automatic Translation)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Selectați o opțiune. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Selectați sau creați un set de câmpuri nou care conține toate câmpurile care vor fi utilizate de formulare. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Selectați sau creați o nouă definiție a fluxului de lucru pentru a ghida completarea formularelor. Aveți posibilitatea să asociați formulare la activitățile fluxului de lucru în pasul următor. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Selectați sau creați un formular pentru fiecare activitate flux de lucru. Fiecare formular este un subset al setului de câmpuri definit în pasul 2. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Selectați aplicațiile pentru care doriți să începeți un proces de export. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Please select the available languages of the site among the available languages of the portal (<em>{0}</em>). (Automatic Copy)
