--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -11359,7 +11359,6 @@ please-select-a-country=Izberite državo.
 please-select-a-course=Izberite smer.
 please-select-a-currency=Izberite valuto.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
-please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Izberite obseg distribucije. (Automatic Translation)
 please-select-a-document-type=Izberite pravilen tip.
 please-select-a-duration=Izberite trajanje.
@@ -11370,7 +11369,6 @@ please-select-a-location=Izberite lokacijo.
 please-select-a-menu-item-to-continue=Izberite element menija, ki ga želite nadaljevati. (Automatic Translation)
 please-select-a-method-on-the-left=Izberite metodo na levi. (Automatic Translation)
 please-select-a-new-repository-hook=Izberite nov kavelj za skladišče. (Automatic Translation)
-please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Izberite izdelek.
 please-select-a-region=Izberite področje.
 please-select-a-response=Izberite odgovor.
@@ -11431,10 +11429,12 @@ please-select-at-least-one-organization-and-one-location=Izberite vsaj eno organ
 please-select-at-least-one-section=Izberite vsaj en odsek. (Automatic Translation)
 please-select-at-least-one-site=Izberite vsaj eno licenco.
 please-select-at-least-one-social-relation-type=Izberite vsaj eno vrsto družabnega soodloka. (Automatic Translation)
+please-select-delivery-terms=Please select delivery terms. (Automatic Copy)
 please-select-one-option=Izberite eno možnost. (Automatic Translation)
 please-select-or-create-a-new-field-set-containing-all-the-fields-that-will-be-used-by-your-forms=Izberite ali ustvarite nov nabor polj, ki vsebuje vsa polja, ki jih bodo uporabili vaši obrazci. (Automatic Translation)
 please-select-or-create-a-new-workflow-definition-to-guide-the-completion-of-forms.-you-can-associate-forms-to-workflow-tasks-in-the-next-step=Izberite ali ustvarite novo definicijo poteka dela za usmerjanje izpolnjevanja obrazcev. Obrazce lahko povežete z opravili poteka dela v naslednjem koraku. (Automatic Translation)
 please-select-or-create-one-form-for-each-workflow-task.-each-form-is-a-subset-of-the-field-set-defined-in-step-2=Izberite ali ustvarite en obrazec za vsako opravilo poteka dela. Vsak obrazec je podskupina nabora polj, opredeljena v koraku 2. (Automatic Translation)
+please-select-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-the-applications-for-which-you-want-to-start-an-export-process=Izberite aplikacije, za katere želite začeti postopek izvoza. (Automatic Translation)
 please-select-the-available-languages-of-the-asset-library-among-the-available-languages-of-the-portal-x=Please select the available languages of the asset library among the available languages of the portal ({0}). (Automatic Copy)
 please-select-the-available-languages-of-the-site-among-the-available-languages-of-the-portal-x=Please select the available languages of the site among the available languages of the portal (<em>{0}</em>). (Automatic Copy)
